# zmk-time-behavior

./: CMakeLists.txt  Kconfig  README.md
bindings/behaviors/: zmk,behavior-time-clear.yaml  zmk,behavior-time-commit.yaml  zmk,behavior-time-digit.yaml
dts/behaviors/: zmk_behavior_time.dtsi
dts/bindings/behaviors/: zmk,behavior-time-clear.yaml  zmk,behavior-time-commit.yaml  zmk,behavior-time-digit.yaml
include/zmk_behavior_time/: rtc_time.h
src/: behavior_time.c
src/behaviors/: behavior_time.c  behavior_time.h  behavior_time_clear.c  behavior_time_commit.c  behavior_time_digit.c  rtc_time.h
zephyr/: module.yaml
